manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kaba-ai-virtualservice
  namespace: kaba
spec:
  hosts:
    - "ai.kaba.team"
  gateways:
    - kaba-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8000
            host: kaba-ai-service
